--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
   <body>
     <div class="app"></div>
     <script src="./requestNew.js"></script>
-    <script src="./start.js"></script>
-    <script src="./game.js"></script>
+    <script src="./src/start.js"></script>
+    <script src="./src/game.js"></script>
+    <script src="./src/gameOpen.js"></script>
     <script>
       window.application.blocks.startButton();
     </script>
