--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <div class="app"></div>
     <script src="./requestNew.js"></script>
     <script src="./src/start.js"></script>
-    <script src="./src/game.js"></script>
+    <script src="./src/game1.js"></script>
+    <script src="./src/game2.js"></script>
+    <script src="./src/game3.js"></script>
     <script src="./src/gameOpen.js"></script>
     <script>
       window.application.blocks.startButton();
